修复如下问题： 人工转接时对话历史仅包含用户内容；